--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,20 +43,20 @@
             </div>
             <nav class="nav flex-column sideNavLink-container">
                 {% if current_user.role.role_name == 'admin' %}
-                    <a class="nav-link text-white" href="#">Onboarding</a>
-                    <a class="nav-link text-white" href="{{ url_for('manage_training_modules') }}">Training</a>
-                    <a class="nav-link text-white" href="#">Knowledge Base</a>
-                    <a class="nav-link text-white" href="{{ url_for('manage_users') }}">User Managment</a>
-                    <a class="nav-link text-white" href="#">Onboarding</a>
-                    <a class="nav-link text-white" href="#">Reports</a>
-                    <a class="nav-link text-white" href="#">Content Management</a>
+                    <a class="nav-link" href="#">Onboarding</a>
+                    <a class="nav-link" href="{{ url_for('manage_training_modules') }}">Training</a>
+                    <a class="nav-link" href="#">Knowledge Base</a>
+                    <a class="nav-link" href="{{ url_for('manage_users') }}">User Managment</a>
+                    <a class="nav-link" href="#">Onboarding</a>
+                    <a class="nav-link" href="#">Reports</a>
+                    <a class="nav-link" href="#">Content Management</a>
                     {% elif current_user.role.role_name == 'manager' %}
-                    <a class="nav-link text-white" href="#">Onboarding</a>
-                    <a class="nav-link text-white" href="#">Training</a>
-                    <a class="nav-link text-white" href="#">Reports</a>
+                    <a class="nav-link" href="#">Onboarding</a>
+                    <a class="nav-link" href="#">Training</a>
+                    <a class="nav-link" href="#">Reports</a>
                     {% elif current_user.role.role_name == 'staff' %}
-                    <a class="nav-link text-white" href="#">Onboarding</a>
-                    <a class="nav-link text-white" href="{{ url_for('training_dashboard') }}">Training</a>
+                    <a class="nav-link" href="#">Onboarding</a>
+                    <a class="nav-link" href="{{ url_for('training_dashboard') }}">Training</a>
                 {% endif %}
             </nav>
             <img src="{{ url_for('static', filename='images/logoImageWhite.svg') }}" class="sidebarLogo">
