--- a/app/templates/admin/createUser.html
+++ b/app/templates/admin/createUser.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Register New User</h1>
+    <h1 class = "page-title">Register New User</h1>
+    <div class="form-container">
     <form action="" method="post">
         {{ form.hidden_tag() }}
         
@@ -95,13 +96,11 @@
             {% endfor %}
         </p>
         
-        
-        <!-- Submit Button -->
-        <p>{{ form.submit() }}</p>
-
-         <!-- Back Button -->
-        <p>
-            <a href="{{ url_for('manage_users') }}" class="btn">Back</a>
-        </p>
+         <!-- Buttons -->
+        <div class="button-container-form">
+            {{ form.submit(class_="dark-blue-button") }}
+            <a href="{{ url_for('manage_users') }}" class="dark-blue-button">Back</a>
+        </div>
+    </div>
     </form>
 {% endblock %}
