--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -40,6 +40,8 @@ body {
 .sidebar {
     background-color: #00854a; 
     color: white;
+    font-size: 1rem;
+    font-weight: 400;
     height: 100vh; 
     position: fixed;
     width: 200px; 
@@ -47,7 +49,14 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    text-align: center; 
+    text-align: left 
+}
+
+.profile-photo-text {
+    font-size: 1rem;
+    font-weight: 200;
+    color: rgb(211, 225, 211);
+    text-align: center;
 }
 
 .sidebarLogo {
@@ -246,7 +255,7 @@ body {
 .button-container-form {
     display: inline-block;
     margin-bottom: 10px; 
-    margin-top: 0px;
+    margin-top: 10px;
 }
 
 .btn-view-details {
