--- a/app/templates/admin/editUser.html
+++ b/app/templates/admin/editUser.html
@@ -112,5 +112,10 @@
             <a href="{{ url_for('manage_users') }}" class="dark-blue-button">Back</a>
         </div>
     </form>
+    <form action="{{ url_for('delete_user', user_id=user.id) }}"
+          method="post"
+          onsubmit="return confirm('Confirm delete');">
+          <button type="submit" class="warning-button">Delete</button>
+    </form>
 </div>
 {% endblock %}
