--- a/app/templates/admin/manage_training_modules.html
+++ b/app/templates/admin/manage_training_modules.html
@@ -24,9 +24,12 @@
             <td>
                 <a href="{{ url_for('details_training_module', module_id=module.id) }}" class="royal-blue-button">View</a>
                 <a href="{{ url_for('edit_training_module', module_id=module.id) }}" class="royal-blue-button">Edit</a>
-               {# <form method="POST" action="{{ url_for('delete_training_module', module_id=module.id) }}" style="display:inline;">
-                    <button type="submit" class="warning-button" onclick="return confirm('Delete this module?')">Delete</button>
-                </form> #}
+                <form method="POST" 
+                      action="{{ url_for('delete_training_module', module_id=module.id) }}" 
+                      style="display:inline;"
+                      onsubmit="return confirm('Are you sure you want to delete this module?');">
+                    <button type="submit" class="warning-button">Delete</button>
+                </form>
       </td>
         </tr>
         {% endfor %}
