--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -115,6 +115,53 @@ body {
     margin-right: 20px; 
 }
 
+/* ------------------------------------- Button Styling ------------------------------------- */
+
+.royal-blue-button {
+    background-color: #5271FF;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10%;
+    text-decoration: none;
+    margin: auto;
+}
+
+.dark-blue-button {
+    background-color: #004AAD;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10%;
+    text-decoration: none;
+    margin: auto;
+}
+
+.button-container-outside-table {
+    display: inline-block;
+    margin-top: 20px;
+    margin-bottom: 10px; 
+}
+
+.button-container-form {
+    display: inline-block;
+    margin-bottom: 10px; 
+    margin-top: 0px;
+
+}
+
+.btn-view-details {
+    color: #333;
+}
+
+
+.warning-button {
+    background-color: #a91b2b;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10%;
+    text-decoration: none;
+    margin-left: 30px;
+}
+
 /* ----------------------------------- Content Area Styling ----------------------------------- */
 
 .content {
@@ -162,20 +209,19 @@ body {
 
 .admin-quick-links {
     display: grid;
-    grid-template-columns: repeat(3, 250px); 
-    grid-gap: 20px; 
-    margin-top: 20px;
-    justify-content: center; 
-    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 1rem;
+    margin-top: 1.25rem;
+    justify-items: center;
 }
 
 .quick-link-btn {
+    width: 100%;
+    height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 200px;
-    height: 150px;
     border-radius: 8px;
     color: white; 
     text-decoration: none;
@@ -187,6 +233,7 @@ body {
     height: 10px;
     border-radius: 5px;
 }
+
 /* ------------------------------------- Table Styling ------------------------------------- */
 
 /* Makes the table container scrollable */
@@ -226,52 +273,7 @@ body {
   width: 1%;
 }
 
-/* ------------------------------------- Button Styling ------------------------------------- */
 
-.royal-blue-button {
-    background-color: #5271FF;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 10%;
-    text-decoration: none;
-    margin: auto;
-}
-
-.dark-blue-button {
-    background-color: #004AAD;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 10%;
-    text-decoration: none;
-    margin: auto;
-}
-
-.button-container-outside-table {
-    display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 10px; 
-}
-
-.button-container-form {
-    display: inline-block;
-    margin-bottom: 10px; 
-    margin-top: 0px;
-
-}
-
-.btn-view-details {
-    color: #333;
-}
-
-
-.warning-button {
-    background-color: #a91b2b;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 10%;
-    text-decoration: none;
-    margin-left: 30px;
-}
 
 /* ----------------------------------- Login Page Styling ------------------------------------- */
 
