--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -124,34 +124,11 @@ body {
     border-radius: 10%;
     text-decoration: none;
     margin: auto;
+    font-size: 1rem;
+    line-height: 1.2;
+    border: none;
+    box-shadow: none;
 }
-
-.dark-blue-button {
-    background-color: #004AAD;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 10%;
-    text-decoration: none;
-    margin: auto;
-}
-
-.button-container-outside-table {
-    display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 10px; 
-}
-
-.button-container-form {
-    display: inline-block;
-    margin-bottom: 10px; 
-    margin-top: 0px;
-
-}
-
-.btn-view-details {
-    color: #333;
-}
-
 
 .warning-button {
     background-color: #a91b2b;
@@ -160,6 +137,40 @@ body {
     border-radius: 10%;
     text-decoration: none;
     margin-left: 30px;
+    border: none;
+    box-shadow: none;
+    font-size: 1rem;
+    line-height: 1.2;
+}
+
+.dark-blue-button {
+    background-color: #004AAD;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 8%;
+    text-decoration: none;
+    margin: auto;
+    font-size: 1rem;
+    line-height: 1.2;
+    border: none;
+    box-shadow: none;
+}
+
+.button-container-outside-table {
+    display: inline-block;
+    margin-top: 20px;
+    margin-bottom: 10px; 
+    margin-left: 240px;
+}
+
+.button-container-form {
+    display: inline-block;
+    margin-bottom: 10px; 
+    margin-top: 0px;
+}
+
+.btn-view-details {
+    color: #333;
 }
 
 /* ----------------------------------- Content Area Styling ----------------------------------- */
@@ -175,7 +186,7 @@ body {
 
 .page-title {
     font-family: 'Montserrat', sans-serif;  
-    font-size: 2rem;                       
+    font-size: 1.5rem;                       
     font-weight: 200;                       
     color: #242827;                      
 }
@@ -203,6 +214,24 @@ body {
     width: 100%;
     height: 100%;
     border: 0; 
+}
+
+.option-fields {
+    padding: 15px;
+}
+
+.correct-answer {
+    color: green;
+    font-weight: bold;
+    display: inline-block;
+}
+
+.option-num {
+    font-style: italic;
+}
+
+.question-text {
+    font-style: italic;;
 }
 
 /* ------------------------------------- Admin Styling ------------------------------------- */
@@ -254,6 +283,7 @@ body {
   position: sticky;
   top: 0;
   border-bottom: 2px solid #ddd;
+  background: white;
   z-index: 2;
 }
 
@@ -266,13 +296,12 @@ body {
   border-bottom: 1px solid #eee;
 }
 
-/* narrow “Actions” column so buttons don’t stretch everything */
+/* Reduce last column so buttons don’t stretch */
 .user-table th:last-child,
 .user-table td:last-child {
   white-space: nowrap;
   width: 1%;
 }
-
 
 
 /* ----------------------------------- Login Page Styling ------------------------------------- */
@@ -334,3 +363,4 @@ body.login-page {
 .loginGoogle {
     padding: 50px;
 }
+
