--- a/app/templates/admin/create_training_module.html
+++ b/app/templates/admin/create_training_module.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h2 class="mb-4">Create Training Module</h2>
-<form method="POST" action="">
+<div class="page-container">
+    <form method="POST" action="">
     {{ form.hidden_tag() }}
     
     <!-- Module Details -->
@@ -58,7 +57,7 @@
             {% for question_form in form.questions %}
             <div class="question-block border rounded p-3 mb-4">
                 <h5 class="mb-3">Question {{ loop.index }}</h5>
-                <div class="mb-3">
+                <div class="mb-3 question-text">
                     {{ question_form.question_text.label(class="form-label") }}
                     {{ question_form.question_text(class="form-control") }}
                     {% for error in question_form.question_text.errors %}
@@ -66,45 +65,60 @@
                     {% endfor %}
                 </div>
             
-            <h5>Options</h5>
-            <div class="form-group">
-                <label>Option 1</label>
-                {{ question_form.option1.option_text(class="form-control") }}
-                {{ question_form.option1.is_correct.label }}
-                {{ question_form.option1.is_correct() }}
+                <h5>Options</h5>
+                <div class="option-fields">
+                    <label class = "option-num">Option 1</label>
+                    {{ question_form.option1.option_text(class="form-control") }}
+                    <div class="correct-answer">
+                        {{ question_form.option1.is_correct.label }}
+                        {{ question_form.option1.is_correct() }}
+                    </div>
+                </div>
+                <div class="option-fields">
+                    <label class = "option-num">Option 2</label>
+                    {{ question_form.option2.option_text(class="form-control") }}
+                    <div class="correct-answer">
+                        {{ question_form.option2.is_correct.label }}
+                        {{ question_form.option2.is_correct() }}
+                    </div>
+                </div>
+                <div class="option-fields">
+                    <label class = "option-num">Option 3</label>
+                    {{ question_form.option3.option_text(class="form-control") }}
+                    <div class="correct-answer">
+                        {{ question_form.option3.is_correct.label }}
+                        {{ question_form.option3.is_correct() }}
+                    </div>
+                </div>
+                <div class="option-fields">
+                    <label class = "option-num">Option 4</label>
+                    {{ question_form.option4.option_text(class="form-control") }}
+                    <div class="correct-answer">
+                        {{ question_form.option4.is_correct.label }}
+                        {{ question_form.option4.is_correct() }}
+                    </div>
+                </div>
             </div>
-
-            <div class="form-group">
-                <label>Option 2</label>
-                {{ question_form.option2.option_text(class="form-control") }}
-                {{ question_form.option2.is_correct.label }}
-                {{ question_form.option2.is_correct() }}
-            </div>
-            <div class="form-group">
-                <label>Option 3</label>
-                {{ question_form.option3.option_text(class="form-control") }}
-                {{ question_form.option3.is_correct.label }}
-                {{ question_form.option3.is_correct() }}
-            </div>
-            <div class="form-group">
-                <label>Option 4</label>
-                {{ question_form.option4.option_text(class="form-control") }}
-                {{ question_form.option4.is_correct.label }}
-                {{ question_form.option4.is_correct() }}
-            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
-
-
     <div class="my-3">
-        {{ form.submit(class="btn btn-primary") }}
-        <button type="submit" name="add_question" value="1" class="btn btn-primary">Add Another Question</button>
+        <button type="submit" 
+                name="add_question"     
+                value="1" 
+                class="royal-blue-button">
+                Next Question
+        </button>
     </div>
 
-    <div>
-        <a href="{{ url_for('manage_training_modules') }}" class="btn btn-link">Back</a>
-    </div>
+</div>
+{% endblock %}
+
+{% block specific_heading %}<h1 class = "page-title">Create Training Module</h1>{% endblock %}
+{% block specific_buttons %}
+<div class = "button-container-outside-table">
+    {{ form.submit(class="dark-blue-button") }}    
+    <a href="{{ url_for('manage_training_modules') }}" class = "dark-blue-button">Back</a>
+</div>
 </form>
-
 {% endblock %}
