--- a/app/templates/admin/manage_training_modules.html
+++ b/app/templates/admin/manage_training_modules.html
@@ -3,44 +3,48 @@
 {% block content %}
 
 <div class="page-container">
-    <div class="header">
-        <h3 class="mb-3">Training Modules</h3>
-        <hr class="border border-secondary">
-    </div>
-
-    <!-- Table for Training Modules -->
     {% if modules %}
     <table class="table table-striped">
         <thead>
             <tr>
                 <th>Title</th>
+                <th>Department</th>
                 <th></th>
             </tr>
-    </thead>
-    <tbody>
+        </thead>
+        <tbody>
         {% for module in modules %}
-        <tr>
-            <td>{{ module.module_title }}</td>
-            <td>
-                <a href="{{ url_for('details_training_module', module_id=module.id) }}" class="royal-blue-button">View</a>
-                <a href="{{ url_for('edit_training_module', module_id=module.id) }}" class="royal-blue-button">Edit</a>
-                <form method="POST" 
-                      action="{{ url_for('delete_training_module', module_id=module.id) }}" 
-                      style="display:inline;"
-                      onsubmit="return confirm('Are you sure you want to delete this module?');">
-                    <button type="submit" class="warning-button">Delete</button>
-                </form>
-      </td>
-        </tr>
+            <tr>
+                <td>{{ module.module_title }}</td>
+                <td>
+                    {% for step in module.onboarding_steps %}
+                      {{ step.path.path_name|title }}{% if not loop.last %}, {% endif %}
+                    {% endfor %}
+                </td>
+                <td>
+                    <a href="{{ url_for('details_training_module', module_id=module.id) }}" class="royal-blue-button">View</a>
+                    <a href="{{ url_for('edit_training_module', module_id=module.id) }}" class="royal-blue-button">Edit</a>
+                    <form method="POST" 
+                        action="{{ url_for('delete_training_module', module_id=module.id) }}" 
+                        style="display:inline;"
+                        onsubmit="return confirm('Are you sure you want to delete this module?');">
+                        <button type="submit" class="warning-button">Delete</button>
+                    </form>
+                </td>
+            </tr>
         {% endfor %}
-    </tbody>
-</table>
-{% else %}
-<p>No training modules found.</p>
-{% endif %}
-
-<a href="{{ url_for('create_training_module') }}" class="btn btn-primary">Create New Module</a>
-<a href="{{ url_for('admin_dashboard') }}" class="btn btn-primary">Back</a>
+        </tbody>
+    </table>
+    {% else %}
+    <p>No training modules found.</p>
+    {% endif %}
+</div>
 {% endblock %}
 
-
+{% block specific_heading %}<h1 class = "page-title">Training Management</h1>{% endblock %}
+{% block specific_buttons %}
+<div class = "button-container-outside-table">
+    <a href="{{ url_for('create_training_module') }}" class = "dark-blue-button">Create New Module</a>
+    <a href="{{ url_for('admin_dashboard') }}" class = "dark-blue-button">Back</a>
+</div>
+{% endblock %}
