--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -95,5 +95,6 @@
 
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
         <script src="{{ url_for('static', filename='js/profilePhotoUpload.js') }}"></script>
+        {% block scripts %}{% endblock %}
     </body>
 </html>
