--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -200,22 +200,6 @@ body {
 
 /* ------------------------------------- Training Styling ------------------------------------- */
 
-.video-container {
-    position: relative;
-    width: 100%;
-    max-width: 800px; 
-    margin: 0 auto; 
-}
-
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0; 
-}
-
 .option-fields {
     padding: 15px;
 }
@@ -232,6 +216,27 @@ body {
 
 .question-text {
     font-style: italic;;
+}
+
+.details-heading {
+    font-style: italic;
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+}
+
+.details-questions-list {
+    padding: 1rem;
+}
+
+.details-options-list {
+    font-size: 0.95rem;
+    margin-bottom: 2rem;
+}
+
+.card-custom-style {
+    padding: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 /* ------------------------------------- Admin Styling ------------------------------------- */
