--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -283,6 +283,12 @@ body {
   border-spacing: 0;
 }
 
+.todo-table{
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+}
+
 /* sticky header row */
 .user-table thead th {
   position: sticky;
