--- a/app/templates/dashboard_staff.html
+++ b/app/templates/dashboard_staff.html
@@ -1,18 +1,28 @@
 {% extends "base.html" %}
-
 {% block content %}
 
- <p>
-    <h1>Staff Dashboard</h1>
-    <h2> Welcome, {{ current_user.first_name }}!</h2>
-</p>
- <h2>Quick Links</h2>
-<p>
-    <a href="{{ url_for('training_dashboard') }}" class="staff-dash-btn">Training</a>
-    <br>
-    <a href="{{ url_for('training_dashboard') }}" class="staff-dash-btn">Onboarding</a>
-    <br>
-    <a href="{{ url_for('training_dashboard') }}" class="staff-dash-btn">Knowledge Base</a>
-</p>
+<div class="page-container">
+    <table class="todo-table"></table>
+        <thead>
+            <tr>
+                <th>Tasks to Complete</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+
+                <tr>
+                    <td></td>
+                </tr>
+        </tbody>
+    </table>
+</div>
+    
 
 {% endblock %}
+
+{% block specific_heading %}
+    <h3 class="welcome-text">Welcome, {{ current_user.first_name|title }}</h3>
+{% endblock %}
+
+
