--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -87,11 +87,15 @@
         <div>
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
-                {% for category, message in messages %}
-                    <div class="flash-message {{ category }}" id="flash-{{ loop.index }}">
-                    {{ message }}
-                    </div>
-                {% endfor %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-dismissible fade show flash-message" role="alert">
+                        {{ message }}
+                        <button type="button"
+                                class="btn-close btn-close-white"
+                                data-bs-dismiss="alert"
+                                aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
                 {% endif %}
             {% endwith %}
         </div>
@@ -108,6 +112,7 @@
         
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
         <script src="{{ url_for('static', filename='js/profilePhotoUpload.js') }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.x/dist/js/bootstrap.bundle.min.js"></script>
         {% block scripts %}{% endblock %}
     </body>
 </html>
