--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -42,11 +42,28 @@
                     </p>
                 </form>
             </div>
+             <!--  Flash Messages -->
+            <div>
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                        <div class="alert alert-dismissible fade show flash-message" role="alert">
+                            {{ message }}
+                            <button type="button"
+                                    class="btn-close btn-close-white"
+                                    data-bs-dismiss="alert"
+                                    aria-label="Close"></button>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </div>
             <div class="login-details-footer">
                 <p class="loginGoogle">Login with google</p>
             </div>
         </div>
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.x/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
 
