Updated staff dashboard

--- a/app/templates/dashboard_training.html
+++ b/app/templates/dashboard_training.html
@@ -8,7 +8,7 @@
         </div>
             <div class="card-body"> 
             {% if to_be_completed_modules %}
-            <table class="table">
+            <table class="table training-dash-table">
                 <thead>
                 <tr>
                     <th>Module</th>
@@ -42,7 +42,7 @@
         </div>
         <div class="card-body">
         {% if in_progress_modules %}
-            <table class="table">
+            <table class="table training-dash-table">
                 <thead>
                     <tr>
                         <th>Module</th>
