--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -138,7 +138,6 @@ body {
     padding: 5px 10px;
     border-radius: 10%;
     text-decoration: none;
-    margin: auto;
     font-size: 1rem;
     line-height: 1.2;
     border: none;
@@ -169,6 +168,15 @@ body {
     line-height: 1.2;
     border: none;
     box-shadow: none;
+}
+
+.to-do-list-btn {
+    background-color: #5271FF;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10%;
+    font-size: 0.8rem;
+    text-decoration: none;
 }
 
 .button-container-outside-table {
@@ -380,3 +388,17 @@ body.login-page {
     padding: 50px;
 }
 
+/* ----------------------------------- Staff Dashboards Styling ------------------------------------- */
+
+.to-do-list {
+    display: flex;               
+    flex-wrap: wrap;  
+    align-items: center;
+    justify-content: space-between;
+}
+
+.training-dash-table td:last-child {
+    text-align: right;
+    padding-right: 2rem;
+
+}
